--- a/2016-09-09/source/728x90.css
+++ b/2016-09-09/source/728x90.css
@@ -305,6 +305,44 @@
   }
 }
 
+/*-- fade in right text animation--*/
+@-webkit-keyframes fadeInRightText {
+  0%   { 
+    opacity: 0; 
+    visibility: visible;
+    -webkit-transform: translate(-20px,0px);
+  }
+  100% { 
+    opacity: 1; 
+    -webkit-transform: translate(0,0);
+    visibility: visible;
+  }
+}
+@-moz-keyframes fadeInRightText {
+  0%   { 
+    opacity: 0; 
+    -moz-transform: translate(-20px,0px);
+    visibility: visible;
+  }
+  100% { 
+    opacity: 1; 
+    -moz-transform: translate(0,0);
+    visibility: visible;
+  }
+}
+@keyframes fadeInRightText {
+  0%   { 
+    opacity: 0; 
+    transform: translate(-20px,0px);
+    visibility: visible;
+  }
+  100% { 
+    opacity: 1; 
+    transform: translate(0,0);
+    visibility: visible;
+  }
+}
+
 /*-------------------------------------------*/
 .absolute {
   position: absolute;
@@ -333,21 +371,79 @@
   animation: fadeIn 1s ease-in-out 1s forwards;
 }
 
-.logo {
-  background: url('./images/728x90_logo.png') no-repeat center center;
+.header {
+  background: url('./images/728x90_header.png') no-repeat center center;
   width: 269px;
   height: 42px;
   top: 0px;
   left: 0px;
 }
-.title-container {}
-.title {
-  background: url('./images/728x90_title.png') no-repeat center center;
-  width: 198px;
-  height: 37px;
-  top: 44px;
-  left: 12px;
+
+.logo1-container {
+  -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
+  -moz-animation: hideContent 10ms ease-in-out 0s forwards;
+  animation: hideContent 10ms ease-in-out 0s forwards;
 }
+.logo1 {
+  background: url('./images/728x90_logo1.png') no-repeat center center;
+  width: 54px;
+  height: 13px;
+  bottom: 9px;
+  left: 12px;
+
+  -webkit-animation: fadeInRightText 0.5s ease-in-out 2s forwards;
+  -moz-animation: fadeInRightText 0.5s ease-in-out 2s forwards;
+  animation: fadeInRightText 0.5s ease-in-out 2s forwards;
+}
+.logo2-container {
+  -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
+  -moz-animation: hideContent 10ms ease-in-out 0s forwards;
+  animation: hideContent 10ms ease-in-out 0s forwards;
+}
+.logo2 {
+  background: url('./images/728x90_logo2.png') no-repeat center center;
+  width: 35px;
+  height: 14px;
+  bottom: 9px;
+  left: 71px;
+
+  -webkit-animation: fadeInRightText 0.5s ease-in-out 2.25s forwards;
+  -moz-animation: fadeInRightText 0.5s ease-in-out 2.25s forwards;
+  animation: fadeInRightText 0.5s ease-in-out 2.25s forwards;
+}
+.logo3-container {
+  -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
+  -moz-animation: hideContent 10ms ease-in-out 0s forwards;
+  animation: hideContent 10ms ease-in-out 0s forwards;
+}
+.logo3 {
+  background: url('./images/728x90_logo3.png') no-repeat center center;
+  width: 80px;
+  height: 14px;
+  bottom: 9px;
+  left: 109px;
+
+  -webkit-animation: fadeInRightText 0.5s ease-in-out 2.5s forwards;
+  -moz-animation: fadeInRightText 0.5s ease-in-out 2.5s forwards;
+  animation: fadeInRightText 0.5s ease-in-out 2.5s forwards;
+}
+.logo4-container {
+  -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
+  -moz-animation: hideContent 10ms ease-in-out 0s forwards;
+  animation: hideContent 10ms ease-in-out 0s forwards;
+}
+.logo4 {
+  background: url('./images/728x90_logo4.png') no-repeat center center;
+  width: 23px;
+  height: 36px;
+  bottom: 9px;
+  left: 187px;
+
+  -webkit-animation: fadeIn 0.5s ease-in-out 3s forwards;
+  -moz-animation: fadeIn 0.5s ease-in-out 3s forwards;
+  animation: fadeIn 0.5s ease-in-out 3s forwards;
+}
+
 .bottle-all-container {
   opacity: 0;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
@@ -358,14 +454,14 @@
   animation: fadeIn 10ms ease-in-out 0s forwards;
 }
 .bottle-all {
-  -webkit-animation: slideLeft 0.5s ease-in-out 5.5s forwards;
-  -moz-animation: slideLeft 0.5s ease-in-out 5.5s forwards;
-  animation: slideLeft 0.5s ease-in-out 5.5s forwards;
+  -webkit-animation: slideLeft 0.5s ease-in-out 6.5s forwards;
+  -moz-animation: slideLeft 0.5s ease-in-out 6.5s forwards;
+  animation: slideLeft 0.5s ease-in-out 6.5s forwards;
 }
 .bottle-wrapper {
-  -webkit-animation: fadeOut 0.5s ease-in-out 5s forwards;
-  -moz-animation: fadeOut 0.5s ease-in-out 5s forwards;
-  animation: fadeOut 0.5s ease-in-out 5s forwards;
+  -webkit-animation: fadeOut 0.5s ease-in-out 6s forwards;
+  -moz-animation: fadeOut 0.5s ease-in-out 6s forwards;
+  animation: fadeOut 0.5s ease-in-out 6s forwards;
 }
 .bottle1-container {
   -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
@@ -379,9 +475,9 @@
   left: 293px;
   top: 0px;
 
-  -webkit-animation: fadeInUp 0.5s ease-in-out 2.5s forwards;
-  -moz-animation: fadeInUp 0.5s ease-in-out 2.5s forwards;
-  animation: fadeInUp 0.5s ease-in-out 2.5s forwards;
+  -webkit-animation: fadeInUp 0.5s ease-in-out 3.5s forwards;
+  -moz-animation: fadeInUp 0.5s ease-in-out 3.5s forwards;
+  animation: fadeInUp 0.5s ease-in-out 3.5s forwards;
 }
 .bottle2-container {
   -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
@@ -395,9 +491,9 @@
   left: 341px;
   top: 0px;
 
-  -webkit-animation: fadeInUp 0.5s ease-in-out 2.75s forwards;
-  -moz-animation: fadeInUp 0.5s ease-in-out 2.75s forwards;
-  animation: fadeInUp 0.5s ease-in-out 2.75s forwards;
+  -webkit-animation: fadeInUp 0.5s ease-in-out 3.75s forwards;
+  -moz-animation: fadeInUp 0.5s ease-in-out 3.75s forwards;
+  animation: fadeInUp 0.5s ease-in-out 3.75s forwards;
 }
 .bottle3-container {
   -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
@@ -411,9 +507,9 @@
   left: 387px;
   top: 0px;
 
-  -webkit-animation: fadeInUp 0.5s ease-in-out 3s forwards;
-  -moz-animation: fadeInUp 0.5s ease-in-out 3s forwards;
-  animation: fadeInUp 0.5s ease-in-out 3s forwards;
+  -webkit-animation: fadeInUp 0.5s ease-in-out 4s forwards;
+  -moz-animation: fadeInUp 0.5s ease-in-out 4s forwards;
+  animation: fadeInUp 0.5s ease-in-out 4s forwards;
 }
 .bottle4-container {
   -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
@@ -427,9 +523,9 @@
   left: 433px;
   top: 0px;
 
-  -webkit-animation: fadeInUp 0.5s ease-in-out 3.25s forwards;
-  -moz-animation: fadeInUp 0.5s ease-in-out 3.25s forwards;
-  animation: fadeInUp 0.5s ease-in-out 3.25s forwards;
+  -webkit-animation: fadeInUp 0.5s ease-in-out 4.25s forwards;
+  -moz-animation: fadeInUp 0.5s ease-in-out 4.25s forwards;
+  animation: fadeInUp 0.5s ease-in-out 4.25s forwards;
 }
 .bottle5-container {
   -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
@@ -443,9 +539,9 @@
   left: 476px;  
   top: 0px;
 
-  -webkit-animation: fadeInUp 0.5s ease-in-out 3.5s forwards;
-  -moz-animation: fadeInUp 0.5s ease-in-out 3.5s forwards;
-  animation: fadeInUp 0.5s ease-in-out 3.5s forwards;
+  -webkit-animation: fadeInUp 0.5s ease-in-out 4.5s forwards;
+  -moz-animation: fadeInUp 0.5s ease-in-out 4.5s forwards;
+  animation: fadeInUp 0.5s ease-in-out 4.5s forwards;
 }
 
 .bottle-alone {
@@ -472,9 +568,9 @@
   top: 10px;
   left: 368px;
 
-  -webkit-animation: fadeInLeft 0.5s ease-in-out 6s forwards;
-  -moz-animation: fadeInLeft 0.5s ease-in-out 6s forwards;
-  animation: fadeInLeft 0.5s ease-in-out 6s forwards;
+  -webkit-animation: fadeInLeft 0.5s ease-in-out 7s forwards;
+  -moz-animation: fadeInLeft 0.5s ease-in-out 7s forwards;
+  animation: fadeInLeft 0.5s ease-in-out 7s forwards;
 
 }
 .text2-container {
@@ -489,9 +585,9 @@
   top: 36px;
   left: 371px;
 
-  -webkit-animation: fadeInLeft 0.5s ease-in-out 6.25s forwards;
-  -moz-animation: fadeInLeft 0.5s ease-in-out 6.25s forwards;
-  animation: fadeInLeft 0.5s ease-in-out 6.25s forwards;
+  -webkit-animation: fadeInLeft 0.5s ease-in-out 7.25s forwards;
+  -moz-animation: fadeInLeft 0.5s ease-in-out 7.25s forwards;
+  animation: fadeInLeft 0.5s ease-in-out 7.25s forwards;
 }
 .text3-container {
   -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
@@ -505,9 +601,9 @@
   top: 59px;
   left: 370px;
 
-  -webkit-animation: fadeInLeft 0.5s ease-in-out 6.5s forwards;
-  -moz-animation: fadeInLeft 0.5s ease-in-out 6.5s forwards;
-  animation: fadeInLeft 0.5s ease-in-out 6.5s forwards;
+  -webkit-animation: fadeInLeft 0.5s ease-in-out 7.5s forwards;
+  -moz-animation: fadeInLeft 0.5s ease-in-out 7.5s forwards;
+  animation: fadeInLeft 0.5s ease-in-out 7.5s forwards;
 }
 .text4-container {
   -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
@@ -521,9 +617,9 @@
   top: 74px;
   left: 371px;
 
-  -webkit-animation: fadeInLeft 0.5s ease-in-out 6.75s forwards;
-  -moz-animation: fadeInLeft 0.5s ease-in-out 6.75s forwards;
-  animation: fadeInLeft 0.5s ease-in-out 6.75s forwards;
+  -webkit-animation: fadeInLeft 0.5s ease-in-out 7.75s forwards;
+  -moz-animation: fadeInLeft 0.5s ease-in-out 7.75s forwards;
+  animation: fadeInLeft 0.5s ease-in-out 7.75s forwards;
 }
 
 .cta-container {
@@ -540,9 +636,9 @@
   top: 0px;
   right: 10px;
 
-  -webkit-animation: fadeInRight 0.5s ease-in-out 7.5s forwards;
-  -moz-animation: fadeInRight 0.5s ease-in-out 7.5s forwards;
-  animation: fadeInRight 0.5s ease-in-out 7.5s forwards;
+  -webkit-animation: fadeInRight 0.5s ease-in-out 8.5s forwards;
+  -moz-animation: fadeInRight 0.5s ease-in-out 8.5s forwards;
+  animation: fadeInRight 0.5s ease-in-out 8.5s forwards;
 }
 
 .border {
