--- a/2016-09-14/source/300x250/300x250.css
+++ b/2016-09-14/source/300x250/300x250.css
@@ -190,6 +190,44 @@
   }
 }
 
+/*-- fade in up animation--*/
+@-webkit-keyframes fadeInUp {
+  0%   { 
+    opacity: 0; 
+    visibility: visible;
+    -webkit-transform: translate(0,200%);
+  }
+  100% { 
+    opacity: 1; 
+    -webkit-transform: translate(0,0);
+    visibility: visible;
+  }
+}
+@-moz-keyframes fadeInUp {
+  0%   { 
+    opacity: 0; 
+    -moz-transform: translate(0,200%);
+    visibility: visible;
+  }
+  100% { 
+    opacity: 1; 
+    -moz-transform: translate(0,0);
+    visibility: visible;
+  }
+}
+@keyframes fadeInUp {
+  0%   { 
+    opacity: 0; 
+    transform: translate(0,200%);
+    visibility: visible;
+  }
+  100% { 
+    opacity: 1; 
+    transform: translate(0,0);
+    visibility: visible;
+  }
+}
+
 /*-------------------------------------------*/
 * {
   -webkit-box-sizing: border-box;
@@ -205,8 +243,8 @@
   position: absolute;
   top: 0px;
   left: 0px;
-  width: 320px;
-  height: 50px;
+  width: 300px;
+  height: 250px;
   display: block;
 }
 
@@ -216,6 +254,8 @@
   -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
   -moz-animation: hideContent 10ms ease-in-out 0s forwards;
   animation: hideContent 10ms ease-in-out 0s forwards;
+  left: 50%;
+  margin-left: -150px;
 }
 
 .content{
@@ -228,57 +268,136 @@
 
     overflow: hidden;
 }
-.frame12-container {
-  opacity: 0;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-  z-index: 1;
 
-  -webkit-animation: fadeInOnly 10ms ease-in-out 0s forwards;
-  -moz-animation: fadeInOnly 10ms ease-in-out 0s forwards;
-  animation: fadeInOnly 10ms ease-in-out 0s forwards;
+.frame1-wrapper {
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    z-index: 1;
+
+    -webkit-animation: fadeInOnly 10ms ease-in-out 0s forwards;
+    -moz-animation: fadeInOnly 10ms ease-in-out 0s forwards;
+    animation: fadeInOnly 10ms ease-in-out 0s forwards;
 }
-.frame1-text-wrapper {
+.frame1-container {
+    -webkit-animation: fadeOut 0.5s ease-in-out 5.5s forwards;
+    -moz-animation: fadeOut 0.5s ease-in-out 5.5s forwards;
+    animation: fadeOut 0.5s ease-in-out 5.5s forwards;
+}
+.frame1-title-container {
     -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
     -moz-animation: hideContent 10ms ease-in-out 0s forwards;
     animation: hideContent 10ms ease-in-out 0s forwards;
 }
+.frame1-title {
+    width: 300px;
+    height: 250px;
+    background: url('./300x250_txt1.png') no-repeat center center;
+    top: 0px;
+    left: 0px;
+
+    -webkit-animation: fadeInRight 1s ease-in-out 1.5s forwards;
+    -moz-animation: fadeInRight 1s ease-in-out 1.5s forwards;
+    animation: fadeInRight 1s ease-in-out 1.5s forwards;
+}
 .frame1-text-container {
-    -webkit-animation: fadeOut 0.5s ease-in-out 5s forwards;
-    -moz-animation: fadeOut 0.5s ease-in-out 5s forwards;
-    animation: fadeOut 0.5s ease-in-out 5s forwards;
+    -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
+    -moz-animation: hideContent 10ms ease-in-out 0s forwards;
+    animation: hideContent 10ms ease-in-out 0s forwards;
 }
 .frame1-text {
-    width: 194px;
-    height: 41px;
-    background: url('./320x50_text1.png') no-repeat center center;
-    left: 10px;
-    top: 4px;
+    width: 300px;
+    height: 250px;
+    background: url('./300x250_txt1-1.png') no-repeat center center;
+    top: 0px;
+    left: 0px;
 
     -webkit-animation: fadeInRight 1s ease-in-out 2s forwards;
     -moz-animation: fadeInRight 1s ease-in-out 2s forwards;
     animation: fadeInRight 1s ease-in-out 2s forwards;
 }
+.white-square {
+    width: 17px;
+    height: 28px;
+    background: #fff;
+    left: 0px;
+    bottom: 0px;
+    z-index: 0;
+}
+.children-image {
+    width: 286px;
+    height: 238px;
+    background: url('./300x250_fond.jpg') no-repeat center center;
+    left: 15px;
+    top: 17px;
+    z-index: 0;
+}
 
-.frame2-text-wrapper {
+.frame3-container {
+}
+.frame3-title-container {
     -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
     -moz-animation: hideContent 10ms ease-in-out 0s forwards;
     animation: hideContent 10ms ease-in-out 0s forwards;
 }
-.frame2-text-container {
-    -webkit-animation: fadeOut 0.5s ease-in-out 8.5s forwards;
-    -moz-animation: fadeOut 0.5s ease-in-out 8.5s forwards;
-    animation: fadeOut 0.5s ease-in-out 8.5s forwards;
-}
-.frame2-text {
-    width: 203px;
-    height: 41px;
-    background: url('./320x50_text2.png') no-repeat center center;
-    left: 10px;
-    top: 4px;
+.frame3-title {
+    width: 300px;
+    height: 250px;
+    background: url('./300x250_txt3.png') no-repeat center center;
+    top: 0px;
+    left: 0px;
 
-    -webkit-animation: fadeInRight 1s ease-in-out 5.5s forwards;
-    -moz-animation: fadeInRight 1s ease-in-out 5.5s forwards;
-    animation: fadeInRight 1s ease-in-out 5.5s forwards;
+    -webkit-animation: fadeInRight 1s ease-in-out 6s forwards;
+    -moz-animation: fadeInRight 1s ease-in-out 6s forwards;
+    animation: fadeInRight 1s ease-in-out 6s forwards;
+}
+.frame3-text-container {
+    -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
+    -moz-animation: hideContent 10ms ease-in-out 0s forwards;
+    animation: hideContent 10ms ease-in-out 0s forwards;
+}
+.frame3-text {
+    width: 300px;
+    height: 250px;
+    background: url('./300x250_txt3-1.png') no-repeat center;
+    top: 0px;
+    left: 0px;
+
+    -webkit-animation: fadeInRight 1s ease-in-out 6.5s forwards;
+    -moz-animation: fadeInRight 1s ease-in-out 6.5s forwards;
+    animation: fadeInRight 1s ease-in-out 6.5s forwards;
+}
+.footer-container {
+    -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
+    -moz-animation: hideContent 10ms ease-in-out 0s forwards;
+    animation: hideContent 10ms ease-in-out 0s forwards;
+}
+.footer {
+    width: 300px;
+    height: 93px;
+    background-color: #ffffff;
+    bottom: 0px;
+    left: 0px;
+
+    -webkit-animation: fadeInUp 1s ease-in-out 7s forwards;
+    -moz-animation: fadeInUp 1s ease-in-out 7s forwards;
+    animation: fadeInUp 1s ease-in-out 7s forwards;
+}
+
+.logo-container {
+    -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
+    -moz-animation: hideContent 10ms ease-in-out 0s forwards;
+    animation: hideContent 10ms ease-in-out 0s forwards;
+}
+.logo {
+    width: 165px;
+    height: 104px;
+    background: url('./300x250_logo.png') no-repeat center center;
+    bottom: -7px;
+    right: -5px;
+
+    -webkit-animation: fadeInUp 1s ease-in-out 7.25s forwards;
+    -moz-animation: fadeInUp 1s ease-in-out 7.25s forwards;
+    animation: fadeInUp 1s ease-in-out 7.25s forwards;
 }
 
 .cta-container {
@@ -287,23 +406,18 @@
     animation: hideContent 10ms ease-in-out 0s forwards;
 }
 .cta {
-    width: 203px;
-    height: 36px;
-    background: url('./320x50_cta.png') no-repeat center center;
-    left: 11px;
-    top: 6px;
-
-    -webkit-animation: fadeInRight 1s ease-in-out 9s forwards;
-    -moz-animation: fadeInRight 1s ease-in-out 9s forwards;
-    animation: fadeInRight 1s ease-in-out 9s forwards;
-
+    width: 119px;
+    height: 39px;
+    background: url('./300x250_CTA.png') no-repeat center center;
+    background-position: -2px -2px;
+    left: 20px;
+    bottom: 42px;
     z-index: 100;
-}
 
-.logo {
-    width: 89px;
-    height: 50px;
-    background: url('./320x50_logo.png') no-repeat center center;
-    bottom: 0px;
-    right: 0px;
+    -webkit-animation: fadeInUp 0.5s ease-in-out 8s forwards;
+    -moz-animation: fadeInUp 0.5s ease-in-out 8s forwards;
+    animation: fadeInUp 0.5s ease-in-out 8s forwards;
+}
+.cta:hover {
+    background-position: -2px -41px;
 }
