--- a/2016-09-14/source/300x600/300x600.css
+++ b/2016-09-14/source/300x600/300x600.css
@@ -190,6 +190,45 @@
   }
 }
 
+/*-- fade in up animation--*/
+@-webkit-keyframes fadeInUp {
+  0%   { 
+    opacity: 0; 
+    visibility: visible;
+    -webkit-transform: translate(0,200%);
+  }
+  100% { 
+    opacity: 1; 
+    -webkit-transform: translate(0,0);
+    visibility: visible;
+  }
+}
+@-moz-keyframes fadeInUp {
+  0%   { 
+    opacity: 0; 
+    -moz-transform: translate(0,200%);
+    visibility: visible;
+  }
+  100% { 
+    opacity: 1; 
+    -moz-transform: translate(0,0);
+    visibility: visible;
+  }
+}
+@keyframes fadeInUp {
+  0%   { 
+    opacity: 0; 
+    transform: translate(0,200%);
+    visibility: visible;
+  }
+  100% { 
+    opacity: 1; 
+    transform: translate(0,0);
+    visibility: visible;
+  }
+}
+
+
 /*-------------------------------------------*/
 * {
   -webkit-box-sizing: border-box;
@@ -225,22 +264,10 @@
     -webkit-animation: fadeIn 1s ease-in-out 1s forwards;
     -moz-animation: fadeIn 1s ease-in-out 1s forwards;
     animation: fadeIn 1s ease-in-out 1s forwards;
+
+    overflow: hidden;
 }
 
-.frame12-wrapper {
-    opacity: 0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    z-index: 1;
-
-    -webkit-animation: fadeInOnly 10ms ease-in-out 0s forwards;
-    -moz-animation: fadeInOnly 10ms ease-in-out 0s forwards;
-    animation: fadeInOnly 10ms ease-in-out 0s forwards;
-}
-.frame12-container {
-    -webkit-animation: fadeOut 0.5s ease-in-out 8.5s forwards;
-    -moz-animation: fadeOut 0.5s ease-in-out 8.5s forwards;
-    animation: fadeOut 0.5s ease-in-out 8.5s forwards;
-}
 .frame1-title-container {
     -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
     -moz-animation: hideContent 10ms ease-in-out 0s forwards;
@@ -253,26 +280,21 @@
     left: 9px;
     bottom: 540px;
 
-    -webkit-animation: fadeInRight 0.5s ease-in-out 2s forwards;
-    -moz-animation: fadeInRight 0.5s ease-in-out 2s forwards;
-    animation: fadeInRight 0.5s ease-in-out 2s forwards;
+    -webkit-animation: fadeInRight 1s ease-in-out 1.5s forwards;
+    -moz-animation: fadeInRight 1s ease-in-out 1.5s forwards;
+    animation: fadeInRight 1s ease-in-out 1.5s forwards;
 }
-.frame1-text-wrapper {
+.frame1-text-container {
     -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
     -moz-animation: hideContent 10ms ease-in-out 0s forwards;
     animation: hideContent 10ms ease-in-out 0s forwards;
 }
-.frame1-text-container {
-    -webkit-animation: fadeOut 0.5s ease-in-out 5s forwards;
-    -moz-animation: fadeOut 0.5s ease-in-out 5s forwards;
-    animation: fadeOut 0.5s ease-in-out 5s forwards;
-}
 .frame1-text {
-    width: 255px;
-    height: 107px;
+    width: 261px;
+    height: 44px;
     background: url('./300x600_text1.png') no-repeat center center;
     left: 10px;
-    top: 63px;
+    top: 69px;
 
     -webkit-animation: fadeInRight 1s ease-in-out 2s forwards;
     -moz-animation: fadeInRight 1s ease-in-out 2s forwards;
@@ -284,76 +306,19 @@
     animation: hideContent 10ms ease-in-out 0s forwards;
 }
 .frame2-text {
-    width: 202px;
-    height: 101px;
+    width: 223px;
+    height: 81px;
     background: url('./300x600_text2.png') no-repeat center center;
     left: 11px;
-    top: 70px;
+    top: 125px;
 
-    -webkit-animation: fadeInRight 1s ease-in-out 5.5s forwards;
-    -moz-animation: fadeInRight 1s ease-in-out 5.5s forwards;
-    animation: fadeInRight 1s ease-in-out 5.5s forwards;
-}
-
-.frame3-container {
-}
-.frame3-title-container {
-    -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
-    -moz-animation: hideContent 10ms ease-in-out 0s forwards;
-    animation: hideContent 10ms ease-in-out 0s forwards;
-}
-.frame3-title {
-    width: 72px;
-    height: 27px;
-    background: url('./300x600_title3.png') no-repeat center center;
-    left: 9px;
-    bottom: 540px;
-
-    -webkit-animation: fadeInRight 0.5s ease-in-out 9s forwards;
-    -moz-animation: fadeInRight 0.5s ease-in-out 9s forwards;
-    animation: fadeInRight 0.5s ease-in-out 9s forwards;
-}
-.frame3-text-container {
-    -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
-    -moz-animation: hideContent 10ms ease-in-out 0s forwards;
-    animation: hideContent 10ms ease-in-out 0s forwards;
-}
-.frame3-text {
-    width: 241px;
-    height: 101px;
-    background: url('./300x600_text3.png') no-repeat center;
-    left: 10px;
-    top: 70px;
-
-    -webkit-animation: fadeInRight 1s ease-in-out 9s forwards;
-    -moz-animation: fadeInRight 1s ease-in-out 9s forwards;
-    animation: fadeInRight 1s ease-in-out 9s forwards;
-}
-
-.cta-container {
-    -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
-    -moz-animation: hideContent 10ms ease-in-out 0s forwards;
-    animation: hideContent 10ms ease-in-out 0s forwards;
-}
-.cta {
-    width: 254px;
-    height: 33px;
-    background: url('./300x600_cta.png') no-repeat center center;
-    left: 10px;
-    top: 204px;
-
-    -webkit-animation: fadeInRight 1s ease-in-out 10s forwards;
-    -moz-animation: fadeInRight 1s ease-in-out 10s forwards;
-    animation: fadeInRight 1s ease-in-out 10s forwards;
-
-    z-index: 100;
-}
-.cta:hover {
-    background: url('./300x600_cta_hover.png') no-repeat center center;
+    -webkit-animation: fadeInRight 1s ease-in-out 2.5s forwards;
+    -moz-animation: fadeInRight 1s ease-in-out 2.5s forwards;
+    animation: fadeInRight 1s ease-in-out 2.5s forwards;
 }
 
 .children-image {
-    width: 298px;
+    width: 300px;
     height: 360px;
     background: url('./300x600_children.png') no-repeat center center;
     left: 0px;
@@ -365,4 +330,26 @@
     background: url('./300x600_logo.png') no-repeat center center;
     bottom: 11px;
     right: 10px;
+}
+
+.cta-container {
+    -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
+    -moz-animation: hideContent 10ms ease-in-out 0s forwards;
+    animation: hideContent 10ms ease-in-out 0s forwards;
+}
+.cta {
+    width: 119px;
+    height: 39px;
+    background: url('./300x600_cta.png') no-repeat center center;
+    background-position: -2px -2px;
+    left: 10px;
+    bottom: 42px;
+    z-index: 100;
+
+    -webkit-animation: fadeInUp 0.5s ease-in-out 3.5s forwards;
+    -moz-animation: fadeInUp 0.5s ease-in-out 3.5s forwards;
+    animation: fadeInUp 0.5s ease-in-out 3.5s forwards;
+}
+.cta:hover {
+    background-position: -2px -41px;
 }
