--- a/2016-09-14/source/300x600/300x600.css
+++ b/2016-09-14/source/300x600/300x600.css
@@ -197,6 +197,11 @@
     visibility: visible;
     -webkit-transform: translate(0,200%);
   }
+  70% { 
+    opacity: 1; 
+    -webkit-transform: translate(0,-20%);
+    visibility: visible;
+  }
   100% { 
     opacity: 1; 
     -webkit-transform: translate(0,0);
@@ -209,6 +214,11 @@
     -moz-transform: translate(0,200%);
     visibility: visible;
   }
+  70% { 
+    opacity: 1; 
+    -moz-transform: translate(0,-20%);
+    visibility: visible;
+  }
   100% { 
     opacity: 1; 
     -moz-transform: translate(0,0);
@@ -219,6 +229,11 @@
   0%   { 
     opacity: 0; 
     transform: translate(0,200%);
+    visibility: visible;
+  }
+  70% { 
+    opacity: 1; 
+    transform: translate(0,-20%);
     visibility: visible;
   }
   100% { 
@@ -280,9 +295,9 @@
     left: 9px;
     bottom: 540px;
 
-    -webkit-animation: fadeInRight 1s ease-in-out 1.5s forwards;
-    -moz-animation: fadeInRight 1s ease-in-out 1.5s forwards;
-    animation: fadeInRight 1s ease-in-out 1.5s forwards;
+    -webkit-animation: fadeInRight 0.75s ease-in-out 1.5s forwards;
+    -moz-animation: fadeInRight 0.75s ease-in-out 1.5s forwards;
+    animation: fadeInRight 0.75s ease-in-out 1.5s forwards;
 }
 .frame1-text-container {
     -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
@@ -296,9 +311,9 @@
     left: 10px;
     top: 69px;
 
-    -webkit-animation: fadeInRight 1s ease-in-out 2s forwards;
-    -moz-animation: fadeInRight 1s ease-in-out 2s forwards;
-    animation: fadeInRight 1s ease-in-out 2s forwards;
+    -webkit-animation: fadeInRight 0.75s ease-in-out 1.65s forwards;
+    -moz-animation: fadeInRight 0.75s ease-in-out 1.65s forwards;
+    animation: fadeInRight 0.75s ease-in-out 1.65s forwards;
 }
 .frame2-text-container {
     -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
@@ -306,15 +321,15 @@
     animation: hideContent 10ms ease-in-out 0s forwards;
 }
 .frame2-text {
-    width: 223px;
-    height: 81px;
+    width: 255px;
+    height: 86px;
     background: url('./300x600_text2.png') no-repeat center center;
     left: 11px;
     top: 125px;
 
-    -webkit-animation: fadeInRight 1s ease-in-out 2.5s forwards;
-    -moz-animation: fadeInRight 1s ease-in-out 2.5s forwards;
-    animation: fadeInRight 1s ease-in-out 2.5s forwards;
+    -webkit-animation: fadeInRight 0.75s ease-in-out 1.8s forwards;
+    -moz-animation: fadeInRight 0.75s ease-in-out 1.8s forwards;
+    animation: fadeInRight 0.75s ease-in-out 1.8s forwards;
 }
 
 .children-image {
@@ -346,9 +361,9 @@
     bottom: 42px;
     z-index: 100;
 
-    -webkit-animation: fadeInUp 0.5s ease-in-out 3.5s forwards;
-    -moz-animation: fadeInUp 0.5s ease-in-out 3.5s forwards;
-    animation: fadeInUp 0.5s ease-in-out 3.5s forwards;
+    -webkit-animation: fadeInUp 1s ease-in-out 3s forwards;
+    -moz-animation: fadeInUp 1s ease-in-out 3s forwards;
+    animation: fadeInUp 1s ease-in-out 3s forwards;
 }
 .cta:hover {
     background-position: -2px -41px;
